archive/parser/tests/snapshots/statements/valid/0039@3.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE AGGREGATE aggregate1 (*) (sfunc = sfunc1, stype = stype1);"
---
Parse {
    cst: SourceFile@0..65
      DefineStmt@0..65
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Aggregate@7..16 "AGGREGATE"
        Whitespace@16..17 " "
        Ident@17..27 "aggregate1"
        Whitespace@27..28 " "
        Ascii40@28..29 "("
        Ascii42@29..30 "*"
        Ascii41@30..31 ")"
        Whitespace@31..32 " "
        Ascii40@32..33 "("
        DefElem@33..47
          Ident@33..38 "sfunc"
          Whitespace@38..39 " "
          Ascii61@39..40 "="
          Whitespace@40..41 " "
          TypeName@41..47
            Ident@41..47 "sfunc1"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        DefElem@49..63
          Ident@49..54 "stype"
          Whitespace@54..55 " "
          Ascii61@55..56 "="
          Whitespace@56..57 " "
          TypeName@57..63
            Ident@57..63 "stype1"
        Ascii41@63..64 ")"
        Ascii59@64..65 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: DefineStmt(
                DefineStmt {
                    kind: ObjectAggregate,
                    oldstyle: false,
                    defnames: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "aggregate1",
                                    },
                                ),
                            ),
                        },
                    ],
                    args: [
                        Node {
                            node: None,
                        },
                        Node {
                            node: Some(
                                Integer(
                                    Integer {
                                        ival: -1,
                                    },
                                ),
                            ),
                        },
                    ],
                    definition: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "sfunc",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "sfunc1",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 41,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 33,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "stype",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "stype1",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 57,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 49,
                                    },
                                ),
                            ),
                        },
                    ],
                    if_not_exists: false,
                    replace: false,
                },
            ),
            range: 0..64,
        },
    ],
}
