archive/parser/tests/snapshots/statements/valid/0039@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE AGGREGATE aggregate1 (int4) (sfunc = sfunc1, stype = stype1, finalfunc_extra, mfinalfuncextra);"
---
Parse {
    cst: SourceFile@0..102
      DefineStmt@0..102
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Aggregate@7..16 "AGGREGATE"
        Whitespace@16..17 " "
        Ident@17..27 "aggregate1"
        Whitespace@27..28 " "
        Ascii40@28..29 "("
        List@29..33
          FunctionParameter@29..33
            TypeName@29..33
              Ident@29..33 "int4"
        Ascii41@33..34 ")"
        Whitespace@34..35 " "
        Ascii40@35..36 "("
        DefElem@36..50
          Ident@36..41 "sfunc"
          Whitespace@41..42 " "
          Ascii61@42..43 "="
          Whitespace@43..44 " "
          TypeName@44..50
            Ident@44..50 "sfunc1"
        Ascii44@50..51 ","
        Whitespace@51..52 " "
        DefElem@52..66
          Ident@52..57 "stype"
          Whitespace@57..58 " "
          Ascii61@58..59 "="
          Whitespace@59..60 " "
          TypeName@60..66
            Ident@60..66 "stype1"
        Ascii44@66..67 ","
        Whitespace@67..68 " "
        DefElem@68..83
          Ident@68..83 "finalfunc_extra"
        Ascii44@83..84 ","
        Whitespace@84..85 " "
        DefElem@85..100
          Ident@85..100 "mfinalfuncextra"
        Ascii41@100..101 ")"
        Ascii59@101..102 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: DefineStmt(
                DefineStmt {
                    kind: ObjectAggregate,
                    oldstyle: false,
                    defnames: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "aggregate1",
                                    },
                                ),
                            ),
                        },
                    ],
                    args: [
                        Node {
                            node: Some(
                                List(
                                    List {
                                        items: [
                                            Node {
                                                node: Some(
                                                    FunctionParameter(
                                                        FunctionParameter {
                                                            name: "",
                                                            arg_type: Some(
                                                                TypeName {
                                                                    names: [
                                                                        Node {
                                                                            node: Some(
                                                                                String(
                                                                                    String {
                                                                                        sval: "int4",
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        },
                                                                    ],
                                                                    type_oid: 0,
                                                                    setof: false,
                                                                    pct_type: false,
                                                                    typmods: [],
                                                                    typemod: -1,
                                                                    array_bounds: [],
                                                                    location: 29,
                                                                },
                                                            ),
                                                            mode: FuncParamDefault,
                                                            defexpr: None,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                Integer(
                                    Integer {
                                        ival: -1,
                                    },
                                ),
                            ),
                        },
                    ],
                    definition: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "sfunc",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "sfunc1",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 44,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 36,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "stype",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "stype1",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 60,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 52,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "finalfunc_extra",
                                        arg: None,
                                        defaction: DefelemUnspec,
                                        location: 68,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "mfinalfuncextra",
                                        arg: None,
                                        defaction: DefelemUnspec,
                                        location: 85,
                                    },
                                ),
                            ),
                        },
                    ],
                    if_not_exists: false,
                    replace: false,
                },
            ),
            range: 0..101,
        },
    ],
}
